# TaskPro

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.github/workflows/: main.yml
include/: DeadLine.h  Deadline.h  Description.h  MainTask.h  Priority.h  SubTask.h  Subtask.h  Task.h  TaskList.h  deadLine.h  dfs.h  helperFunctions.h  mainMenu.h
src/: CMakeLists.txt  Deadline.cpp  Description.cpp  MainTask.cpp  Makefile  Priority.cpp  Subtask.cpp  Task.cpp  TaskList.cpp  cmake_install.cmake  deadLine.cpp  description.cpp  helperFunctions.cpp  main.cpp  main2.cpp  mainMenu,cpp  task.cpp
test/: CMakeLists.txt  Makefile  cMakeLists.txt  cmake_install.cmake  testDeadline.cpp  testMainTask.cpp  testTask.cpp  testTaskList.cpp
